es-derive2-test/tests/compile_fail/missing_awaits.rs
use es_core::*;

#[derive(Debug, Clone, es_derive2::InjectableEvent)]
pub struct MissingAwaits {
    pub id: String,
}
